--- a/src/app/test/test.component.html
+++ b/src/app/test/test.component.html
@@ -1,7 +1,7 @@
-<div *ngIf="ejemplo">
+<div>
 <br>
 <div class="row" *ngIf="quitarpararesultados">
-  <div class="col s4 offset-s2">
+  <div class="col s5 offset-s1">
     <label class="nombre-usuario" id="cambiodetamanio2">
     Examen aplicado a {{persona.nombre}} {{persona.primer_apellido}} {{persona.segundo_apellido}}
     </label>
